chsnges in html

--- a/index.html
+++ b/index.html
@@ -148,31 +148,31 @@
 			<h1>Skills</h1>
 			
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6  gallery">
-				<a href="work.html"><img src="assets/img/c++++.png" class="img-responsive center-block "></a>
+				<a href="javascript:void(0);"><img src="assets/img/c++++.png" class="img-responsive center-block "></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 gallery">
-				<a href="work.html"><img src="assets/img/html.png" class="img-responsive center-block"></a>
+				<a href="javascript:void(0);"><img src="assets/img/html.png" class="img-responsive center-block"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 gallery">
-				<a href="work.html"><img src="assets/img/cssss.png" class="img-responsive center-block"></a>
+				<a href="javascript:void(0);"><img src="assets/img/cssss.png" class="img-responsive center-block"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 gallery">
-				<a href="work.html"><img src="assets/img/jssss.png" class="img-responsive center-block"></a>
+				<a href="javascript:void(0);"><img src="assets/img/jssss.png" class="img-responsive center-block"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 gallery">
-				<a href="work.html"><img src="assets/img/jq.png" class="img-responsive center-block"></a>
+				<a href="javascript:void(0);"><img src="assets/img/jq.png" class="img-responsive center-block"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 gallery">
-				<a href="work.html"><img src="assets/img/bootstrap.png" class="img-responsive center-block"></a>
+				<a href="javascript:void(0);"><img src="assets/img/bootstrap.png" class="img-responsive center-block"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 gallery">
-				<a href="work.html"><img src="assets/img/angular.png" class="img-responsive center-block"></a>
+				<a href="javascript:void(0);"><img src="assets/img/angular.png" class="img-responsive center-block"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 gallery">
-				<a href="work.html"><img src="assets/img/mysql.png" class="img-responsive center-block"></a>
+				<a href="javascript:void(0);"><img src="assets/img/mysql.png" class="img-responsive center-block"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 gallery">
-				<a href="work.html"><img src="assets/img/android.png" class="img-responsive center-block"></a>
+				<a href="javascript:void(0);"><img src="assets/img/android.png" class="img-responsive center-block"></a>
 			</div>
 		</div><! --/row -->
 	</div><! --/container -->
@@ -341,7 +341,7 @@ jquery.</li>
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-center">
-						<button class="btn btn-primary butt"><a href="latestresume.pdf"><i class="fa fa-download"> RESUME</i></a></button>
+						<button class="btn btn-primary butt"><a href="latestresume.pdf" target="_blank"><i class="fa fa-download"> RESUME</i></a></button>
 					</div>
 				</div>
 			</div>
