--- a/test/index.html
+++ b/test/index.html
@@ -88,7 +88,7 @@
 			
 			<div class="col-lg-3 col-md-3 col-sm-4 gallery">
 				<a href="work.html"><img src="assets/img/icon3.png" class="img-responsive center-block"></a><br><br>
-					<figcaption class="text-center">Making your trip <br>beautiful and easier</figcaption>
+					<p class="text-center">Making your trip <br>beautiful and easier</p>
 				
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-4 gallery">
